--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.1.8",
         "nodemon": "^2.0.15",
+        "pexels": "^1.3.0",
         "validator": "^13.7.0"
     }
 }
