--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
         "bcrypt": "^5.0.1",
         "cors": "^2.8.5",
         "express": "^4.17.2",
+        "firebase-tools": "^11.2.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.1.8",
         "nodemon": "^2.0.15",
