--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^13.3.0"
+    "@testing-library/react": "^13.3.0",
+    "jest-environment-jsdom": "^28.1.3"
   }
 }
